Refs #136090 - Fix menu position on small screen.

--- a/src/SearchBlock/less/styles.less
+++ b/src/SearchBlock/less/styles.less
@@ -1435,6 +1435,14 @@ div#page-document {
       margin: 0px !important;
     }
   }
+
+  div.content-section-tabs.menu {
+    div.item.dropdown {
+      div.menu {
+        transform: translateX(-90px);
+      }
+    }
+  }
 }
 
 div.prev-next-paging button.next,
